home sectiion update

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,1 +1,9 @@
-<p>homepage works!</p>
+<div class="hero-container">
+  <div class="overlay"></div>
+  <img src='images/ostrich.jpg' alt="ostrich">
+  <div class="hero-text">
+    <h1>Welcome to</h1>
+    <h2>The Animal Kingdom</h2>
+    <p>Join me on an exciting journey through the lens as we explore the wild and capture the beautiful moments of animal life.</p>
+  </div>
+</div>
