adjusted magin of home as well as the scrolling effect

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,8 +1,12 @@
 .navbar{
     margin-left: 4rem;
+    position: top;
     background-color: transparent;
-    transition: background-color 0.5s ease;
+    transition: background-color 1s ease;
+    
+    
 }
 .navbar.scrolled {
-    background-color: #333;
+
+    background-color: #2d2d2d;
   }
