contact-form added

--- a/src/app/awards/awards.component.html
+++ b/src/app/awards/awards.component.html
@@ -1,1 +1,15 @@
-<p>awards works!</p>
+<div class="container my-5">
+  <h1 class="text-center my-5">Awards</h1>
+  <div class="d-flex justify-content-center">
+    <img
+      class="award me-5"
+      src="/images/awards/WILD-Photo-Awards.webp"
+      alt=""
+    />
+    <img
+      class="award ms-5"
+      src="/images/awards/BWPA-British-Wildlife-Photography-Awards.png"
+      alt=""
+    />
+  </div>
+</div>
