contact-form added

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,52 @@
-<p>contact works!</p>
+<div class="contact container">
+  <section class="contact-form">
+    <div class="my-5">
+      <h2 class="my-5 text-center">Get in touch with me</h2>
+      <div class="d-flex justify-content-center">
+        <form action="">
+          <div class="mb-3">
+            <div class="form-floating">
+              <input type="text" id="name" class="form-control mb-2" />
+              <label for="name"
+                ><i class="fa-solid fa-user fs-7 me-3"></i>Name</label
+              >
+            </div>
+
+            <div class="form-floating">
+              <input type="email" id="email" class="form-control mb-2" />
+              <label for="email"
+                ><i class="fa-solid fa-envelope me-3"></i>Email</label
+              >
+            </div>
+
+            <div class="form-floating">
+              <input type="text" id="phone" class="form-control mb-2" />
+              <label for="phone"
+                ><i class="fa-solid fa-phone me-3"></i>Phone</label
+              >
+            </div>
+
+            <div class="form-floating">
+              <textarea
+                class="form-control mb-2"
+                id="message"
+                rows="50"
+                cols="50"
+              ></textarea>
+              <label for="message"
+                ><i class="fa-solid fa-comment me-3"></i>Your message to
+                us</label
+              >
+            </div>
+          </div>
+          <div class="mb-3">
+            <input type="checkbox" checked class="me-3" />
+            <label for="">Send copy to my email</label>
+          </div>
+
+          <button type="submit" class="btn btn-success mt-3">Send Email</button>
+        </form>
+      </div>
+    </div>
+  </section>
+</div>
