--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <footer class="row row-cols-1 py-5 my-5 border-top">
         <div class="col">
-            <ul class="nav flex-row justify-content">
+            <ul class="nav flex-row justify-content-end">
                 <li class="nav-item mb-2 mx-3">
                     <a href="#" class="nav-link p-0 text-end">Home</a>
                 </li>
