--- a/src/app/testimonial/testimonial.component.html
+++ b/src/app/testimonial/testimonial.component.html
@@ -1,1 +1,29 @@
-<p>testimonial works!</p>
+<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 justify-content-center align-items-center gap-3">
+    <div class="card text-bg-light mb-3" style="max-width: 18rem;">
+        <div class="card-header justify-content-center">Chris Packham</div>
+        <div class="card-body">
+            <h5 class="card-title">Light card title</h5>
+            <p class="card-text">Sir David Attenborough reveals how Mammals have conquered the Earth, uncovering the secrets
+                to their success with their winning design, incredible adaptability, unrivalled intelligence, and unique
+                sociability.</p>
+        </div>
+    </div>
+    <div class="card text-bg-light mb-3" style="max-width: 18rem;">
+        <div class="card-header">Sir David</div>
+        <div class="card-body">
+            <h5 class="card-title">Light card title</h5>
+            <p class="card-text">Sir David Attenborough reveals how Mammals have conquered the Earth, uncovering the secrets
+            to their success with their winning design, incredible adaptability, unrivalled intelligence, and unique
+            sociability.</p>
+        </div>
+    </div>
+    <div class="card text-bg-light mb-3" style="max-width: 18rem;">
+        <div class="card-header">Chris Packham</div>
+        <div class="card-body">
+            <h5 class="card-title">Light card title</h5>
+            <p class="card-text">Cris Packham Attenborough reveals how Mammals have conquered the Earth, uncovering the secrets
+                to their success with their winning design, incredible adaptability, unrivalled intelligence, and unique
+                sociability.</p>
+        </div>
+    </div>
+</div>
