--- a/src/app/testimonial/testimonial.component.html
+++ b/src/app/testimonial/testimonial.component.html
@@ -1,9 +1,9 @@
-<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 justify-content-center align-items-center gap-3">
+<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 justify-content-center align-items-center gap-5">
     <div class="card text-bg-light mb-3" style="max-width: 18rem;">
-        <div class="card-header justify-content-center">Chris Packham</div>
+        <div class="card-header justify-content-center">Klaus Nigge</div>
         <div class="card-body">
             <h5 class="card-title">Light card title</h5>
-            <p class="card-text">Sir David Attenborough reveals how Mammals have conquered the Earth, uncovering the secrets
+            <p class="card-text">Klaus Nigge Attenborough reveals how Mammals have conquered the Earth, uncovering the secrets
                 to their success with their winning design, incredible adaptability, unrivalled intelligence, and unique
                 sociability.</p>
         </div>
