--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,19 +1,19 @@
 <nav class="navbar navbar-expand-lg fixed-top" [class.scrolled]="isScrolled">
     <div class="container-fluid">
-      <a class="navbar-brand text-light" href="#">Logo</a>
+      <a class="navbar-brand text" href="#">Logo</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active text-light" aria-current="page" href="#">Products</a>
+            <a class="nav-link text" aria-current="page" href="#">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-light" href="#">Portfolio</a>
+            <a class="nav-link text" href="#">Portfolio</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle text" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Info
             </a>
             <ul class="dropdown-menu">
@@ -24,7 +24,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled text-light" aria-disabled="true">Cart</a>
+            <a class="nav-link disabled text" aria-disabled="true">Cart</a>
           </li>
         </ul>
       </div>
