--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -3,27 +3,95 @@
     <div class="my-5">
       <h2 class="my-5 text-center">Get in touch with me</h2>
       <div class="d-flex justify-content-center">
-        <form action="">
+        <form action="" [formGroup]="contactForm" (ngSubmit)="onSubmit()">
           <div class="mb-3">
             <div class="form-floating">
-              <input type="text" id="name" class="form-control mb-2" />
+              <input
+                type="text"
+                id="name"
+                class="form-control mb-2"
+                formControlName="name"
+              />
+
               <label for="name"
                 ><i class="fa-solid fa-user fs-7 me-3"></i>Name</label
               >
+              <div
+                *ngIf="
+                  contactForm.controls.name.invalid &&
+                  (contactForm.controls.name.dirty ||
+                    contactForm.controls.name.touched)
+                "
+                class="alert"
+              >
+                <div
+                  *ngIf="contactForm.controls.name.hasError('required')"
+                  class="text-danger"
+                >
+                  Name is required.
+                </div>
+              </div>
             </div>
 
             <div class="form-floating">
-              <input type="email" id="email" class="form-control mb-2" />
+              <input
+                type="email"
+                id="email"
+                class="form-control mb-2"
+                formControlName="email"
+              />
               <label for="email"
                 ><i class="fa-solid fa-envelope me-3"></i>Email</label
               >
+              <div
+                *ngIf="
+                  contactForm.controls.email.invalid &&
+                  (contactForm.controls.email.dirty ||
+                    contactForm.controls.email.touched)
+                "
+                class="alert"
+              >
+                <div
+                  *ngIf="contactForm.controls.email.hasError('required')"
+                  class="text-danger"
+                >
+                  Email is required.
+                </div>
+
+                <div
+                  *ngIf="contactForm.controls.email.hasError('pattern')"
+                  class="text-danger"
+                >
+                  Please provide a valid email address
+                </div>
+              </div>
             </div>
 
             <div class="form-floating">
-              <input type="text" id="phone" class="form-control mb-2" />
+              <input
+                type="text"
+                id="phone"
+                class="form-control mb-2"
+                formControlName="phone"
+              />
               <label for="phone"
                 ><i class="fa-solid fa-phone me-3"></i>Phone</label
               >
+              <div
+                *ngIf="
+                  contactForm.controls.phone.invalid &&
+                  (contactForm.controls.phone.dirty ||
+                    contactForm.controls.phone.touched)
+                "
+                class="alert"
+              >
+                <div
+                  *ngIf="contactForm.controls.phone.hasError('required')"
+                  class="text-danger"
+                >
+                  Phone is required.
+                </div>
+              </div>
             </div>
 
             <div class="form-floating">
@@ -32,11 +100,26 @@
                 id="message"
                 rows="50"
                 cols="50"
+                formControlName="message"
               ></textarea>
               <label for="message"
-                ><i class="fa-solid fa-comment me-3"></i>Your message to
-                us</label
+                ><i class="fa-solid fa-comment me-3"></i>Your message</label
               >
+              <div
+                *ngIf="
+                  contactForm.controls.message.invalid &&
+                  (contactForm.controls.message.dirty ||
+                    contactForm.controls.message.touched)
+                "
+                class="alert"
+              >
+                <div
+                  *ngIf="contactForm.controls.message.hasError('required')"
+                  class="text-danger"
+                >
+                  Message is required.
+                </div>
+              </div>
             </div>
           </div>
           <div class="mb-3">
@@ -44,7 +127,13 @@
             <label for="">Send copy to my email</label>
           </div>
 
-          <button type="submit" class="btn btn-success mt-3">Send Email</button>
+          <button
+            type="submit"
+            class="btn btn-success mt-3"
+            [disabled]="!contactForm.valid"
+          >
+            Send Email
+          </button>
         </form>
       </div>
     </div>
