--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 <h1>Get to know me!</h1>
-<div class="d-flex justify-content-between align-items-center">
+<div class="d-flex justify-content-between align-items-center singularPart">
   <img src="/images/photographer.jpg" alt="" style="max-width: 500px" />
-  <div>
+  <div class="aboutText">
     <h4>About Me</h4>
     <p>
       Welcome to my world of wildlife photography! I'm Oliver Reed, an
@@ -13,20 +13,22 @@
     </p>
   </div>
 </div>
-<div class="awards">
-  <h4>Awards and Recognition</h4>
-  <p>
-    I am honored to have received prestigious accolades in the field of wildlife
-    photography, including the Wild Photo Award and the British Wildlife
-    Photography Award. These recognitions serve as milestones in my journey,
-    inspiring me to continue exploring and documenting the incredible diversity
-    of wildlife on our planet.
-  </p>
+<div class="awards singularPart">
+  <div class="aboutText">
+    <h4>Awards and Recognition</h4>
+    <p>
+      I am honored to have received prestigious accolades in the field of
+      wildlife photography, including the Wild Photo Award and the British
+      Wildlife Photography Award. These recognitions serve as milestones in my
+      journey, inspiring me to continue exploring and documenting the incredible
+      diversity of wildlife on our planet.
+    </p>
+  </div>
   <app-awards></app-awards>
 </div>
-<div class="d-flex justify-content-between align-items-center">
+<div class="d-flex justify-content-between align-items-center singularPart">
   <img src="/images/camera.jpg" alt="" style="max-width: 500px" />
-  <div>
+  <div class="aboutText">
     <h4>My Vision</h4>
     <p>
       Through my lens, I strive to reveal the intimate and often unseen moments
@@ -37,9 +39,11 @@
     </p>
   </div>
 </div>
-<div class="d-flex flex-row-reverse justify-content-between align-items-center">
+<div
+  class="d-flex flex-row-reverse justify-content-between align-items-center singularPart"
+>
   <img src="/images/conservation.jpg" alt="" style="max-width: 500px" />
-  <div>
+  <div class="aboutText">
     <h4>Conservation and Advocacy</h4>
     <p>
       Beyond photography, I am deeply committed to wildlife conservation. I
@@ -51,9 +55,9 @@
     </p>
   </div>
 </div>
-<div class="d-flex justify-content-between align-items-center">
+<div class="d-flex justify-content-between align-items-center singularPart">
   <img src="/images/adventure.jpg" alt="" style="max-width: 500px" />
-  <div>
+  <div class="aboutText">
     <h4>Join Me on This Adventure</h4>
     <p>
       I invite you to explore my portfolio and join me on this incredible
@@ -64,11 +68,12 @@
     </p>
   </div>
 </div>
+<div class="ending">
+  <p>
+    Thank you for visiting, and I look forward to sharing the wild wonders with
+    you.
+  </p>
 
-<p>
-  Thank you for visiting, and I look forward to sharing the wild wonders with
-  you.
-</p>
-
-<p>Warm regards,</p>
-<h5>Oliver Reed</h5>
+  <p>Warm regards,</p>
+  <h5>Oliver Reed</h5>
+</div>
