--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,13 +3,13 @@
         <div class="col">
             <ul class="nav flex-row justify-content-end">
                 <li class="nav-item mb-2 mx-3">
-                    <a href="#" class="nav-link p-0 text-end">Home</a>
+                    <a routerLink="" class="nav-link p-0 text-end">Home</a>
                 </li>
                 <li class="nav-item mb-2 mx-3">
-                    <a href="#" class="nav-link p-0 text-end">About</a>
+                    <a routerLink="" class="nav-link p-0 text-end">About</a>
                 </li>
                 <li class="nav-item mb-2 mx-3">
-                    <a href="#" class="nav-link p-0 text-end">Contact</a>
+                    <a routerLink="" class="nav-link p-0 text-end">Contact</a>
                 </li>
             </ul>
         </div>
