--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,4 @@
+<div class="border-padding">
 <h1>Get to know me!</h1>
 <div class="d-flex justify-content-between align-items-center">
   <img src="/images/photographer.jpg" alt="" style="max-width: 500px" />
@@ -72,3 +73,4 @@
 
 <p>Warm regards,</p>
 <h5>Oliver Reed</h5>
+</div>
