--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -1,1 +1,35 @@
-<p>customers works!</p>
+<div class="bg-white py-5 py-sm-6 border-padding">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-6 text-center text-lg-start">
+          <h2 class="h3 fw-bold text-gray-900">From our customers</h2>
+          <p class="mt-2 text-lg text-gray-600">Learn how our business satisfy with our customers.</p>
+        </div>
+      </div>
+      <div class="row mt-5 mt-sm-6 border-top border-gray-200 pt-5 pt-sm-6">    
+        <div class="col-lg-4 d-flex flex-column align-items-start mb-4" *ngFor="let customer of customers; index as icustomer">
+          <div class="post-container">
+            <div class="post-content">
+              <div class="d-flex align-items-center gap-2 text-xs">
+                <time datetime="2020-03-16" class="text-gray-500">{{customer.date}}</time>
+              
+              </div>
+              <div class="group mt-3">
+                <h3 class="h5 fw-semibold text-gray-900">
+                  <h2 class="stretched-link text-decoration-none text-gray-900 hover:text-gray-600">{{customer.title}}</h2>
+                </h3>
+                <p class="mt-3 text-sm text-gray-600 text-justify">{{customer.text}}</p>
+              </div>
+            </div>
+            <div class="post-footer">
+              <img src="{{customer.img}}" alt="" class="rounded-circle" width="40" height="40">
+              <div class="text-sm p-3">
+                <p class="fw-semibold text-gray-900 mb-0">{{customer.name}}</p>
+                <p class="text-gray-600 mb-0">Customer</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
