--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,4 +1,4 @@
-<div class="row row-cols-lg-3 row-cols-sm-2">
+<div class="border-padding row row-cols-lg-3 row-cols-sm-2">
   <div *ngFor="let item of itmes; index as iproducts">
     <div class="card border-white my-2" style="max-width: 20rem">
       <img
