--- a/src/styles.css
+++ b/src/styles.css
@@ -27,3 +27,10 @@
 .baricon:hover {
   fill: #ecf39e;
 }
+body{
+    margin-left: 4rem;
+    overflow-x: hidden;    
+}
+.border-padding{
+    padding: 1rem;
+  }
