--- a/src/app/testimonial/testimonial.component.html
+++ b/src/app/testimonial/testimonial.component.html
@@ -1,4 +1,4 @@
-<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 gap-5">
+<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 gap-5 border-padding">
     <div class="card text-bg-light mb-3" style="max-width: 25rem;">
         <div class="card-header justify-content-center">
             <i class="fa-solid fa-star fa-lg" style="color: #ecf39e;"></i>
