added paths and replaced everthing with a routerOutlet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,20 +2,6 @@
 
 <app-mediabar></app-mediabar>
 
-<app-homepage></app-homepage>
-
-<app-about></app-about>
-
-<app-contact></app-contact>
-
-<app-awards></app-awards>
-
-<app-customers></app-customers>
-
-<app-newsletter></app-newsletter>
-
-<app-portfolio></app-portfolio>
-
-<app-testimonial></app-testimonial>
+<router-outlet></router-outlet>
 
 <app-footer></app-footer>
