Worked a little bit on the home page

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,9 +1,27 @@
 <div class="hero-container">
   <div class="overlay"></div>
-  <img src='images/ostrich.jpg' alt="ostrich">
+  <img src="images/ostrich.jpg" alt="ostrich" />
   <div class="hero-text">
     <h1>Welcome to</h1>
     <h2>The Animal Kingdom</h2>
-    <p>Join me on an exciting journey through the lens as we explore the wild and capture the beautiful moments of animal life.</p>
+    <p>
+      Join me on an exciting journey through the lens as we explore the wild and
+      capture the beautiful moments of animal life.
+    </p>
+  </div>
+</div>
+<div>
+  <div class="my-4">
+    <h2 class="mb-5">My Awards:</h2>
+    <app-awards></app-awards>
+  </div>
+  <div class="my-4">
+    <h2 class="mb-5">Customer opinions:</h2>
+    <app-testimonial></app-testimonial>
+    <p>
+      To see more of what my satisfied customers have to say about working with
+      me, and about the quality of work I am able to provide for them,
+      <a routerLink="customer">CLICK HERE</a>!
+    </p>
   </div>
 </div>
