Linked navbar, made small change in routing

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,33 +1,32 @@
 <nav class="navbar navbar-expand-lg fixed-top" [class.scrolled]="isScrolled">
-    <div class="container-fluid">
-      <a class="navbar-brand text" href="#">Logo</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link text" aria-current="page" href="#">Products</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text" href="#">Portfolio</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Info
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Customers</a></li>
-              <li><a class="dropdown-item" href="#">Awards</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Contact</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled text" aria-disabled="true">Cart</a>
-          </li>
-        </ul>
-      </div>
+  <div class="container-fluid">
+    <a class="navbar-brand text" routerLink="/">Logo</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link text" routerLink="/portfolio">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text" routerLink="/about">About me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text" routerLink="/customer">Testimonials</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text" routerLink="/contact">Contact me</a>
+        </li>
+      </ul>
     </div>
-  </nav>
-  
+  </div>
+</nav>
