--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -24,4 +24,7 @@
       <a routerLink="customer">CLICK HERE</a>!
     </p>
   </div>
+  <div>
+    <app-newsletter></app-newsletter>
+  </div>
 </div>
