adjusted small things

--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -12,7 +12,7 @@
             <div class="post-content">
               <div class="d-flex align-items-center gap-2 text-xs">
                 <time datetime="2020-03-16" class="text-gray-500">{{customer.date}}</time>
-                <div class="badge bg-gray-50" *ngFor="let i of [0,1,2,3,4]">
+                <div class="badge bg-gray-50">
                    
                     <i class="fa-solid fa-star fa-lg" style="color: #ecf39e;"></i>
                     <i class="fa-solid fa-star fa-lg" style="color: #ecf39e;"></i>
