--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -21,7 +21,7 @@
           <a class="nav-link text" routerLink="/about">About me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text" routerLink="/customer">Testimonials</a>
+          <a class="nav-link text" routerLink="/customers">Testimonials</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text" routerLink="/contact">Contact me</a>
