--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -21,7 +21,7 @@
     <p>
       To see more of what my satisfied customers have to say about working with
       me, and about the quality of work I am able to provide for them,
-      <a routerLink="customer">CLICK HERE</a>!
+      <a routerLink="customers">CLICK HERE</a>!
     </p>
   </div>
   <div>
