--- a/src/app/testimonial/testimonial.component.html
+++ b/src/app/testimonial/testimonial.component.html
@@ -42,7 +42,11 @@
             <i class="fa-solid fa-star fa-lg" style="color: #ecf39e;"></i>
         </div>
         <div class="card-body">
-            <p class="card-text">"I have been a fan of Oliver Reed's work for years, and his latest collection does not disappoint. His keen eye for detail and his ability to showcase the natural world in such a stunning and respectful manner is truly inspiring. Each photograph is a masterpiece, highlighting the intricate beauty and complexity of wildlife. Oliver's work is a powerful reminder of why we must cherish and protect our natural world. Highly recommended!"</p>
+            <p class="card-text">"I have been a fan of Oliver Reed's work for years, and his latest collection does not
+                disappoint. His keen eye for detail and his ability to showcase the natural world in such a stunning and
+                respectful manner is truly inspiring. Each photograph is a masterpiece, highlighting the intricate
+                beauty and complexity of wildlife. Oliver's work is a powerful reminder of why we must cherish and
+                protect our natural world. Highly recommended!"</p>
             <p class="card-text">— Emily Thompson, Wildlife Photographer</p>
         </div>
     </div>
