--- a/src/app/newsletter/newsletter.component.html
+++ b/src/app/newsletter/newsletter.component.html
@@ -1,6 +1,6 @@
 <div class="newsletter-container">
   <h2>Subscribe to Our Newsletter</h2>
-  <p>Stay updated with the latest news about animals and wildlife conservation. Enjoy the stunning photos we frequently share to bring the beauty of nature closer to you.</p>
+  <p class="bg-dark bg-opacity-50"> <span class="color=">Stay updated with the latest news about animals and wildlife conservation. Enjoy the stunning photos we frequently share to bring the beauty of nature closer to you.</span></p>
   <form class="newsletter-form">
     <input type="email" placeholder="Enter your email" required>
     <button type="submit">Subscribe</button>
