--- a/src/app/newsletter/newsletter.component.css
+++ b/src/app/newsletter/newsletter.component.css
@@ -1,4 +1,3 @@
-
 .newsletter-container {
   background-image: url('https://cdn.pixabay.com/photo/2014/01/12/10/33/bird-242715_1280.jpg');
   background-size: cover;
@@ -13,27 +12,24 @@
   position: relative;
 }
 
-
-
 .newsletter-container h2 {
   font-size: 2rem;
   margin-bottom: 0.5rem;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+  text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.8);
 }
 
 .newsletter-container p {
   font-size: 1rem;
   margin-bottom: 1.5rem;
-
 }
 
 .newsletter-form {
   display: flex;
   flex-direction: column;
-  align-items: center;
+ 	align-items: center;
 }
 
-.span{
+.span {
   color: white;
   opacity: 0;
 }
@@ -60,4 +56,10 @@
 
 .newsletter-form button:hover {
   background-color: #c3d472;
+}
+
+#newsletterSub{
+  font-weight: bold;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #132A13;
 }
