--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -3,12 +3,13 @@
     <div class="my-5">
       <h2 class="my-5 text-center">Get in touch with me</h2>
       <div class="d-flex justify-content-center">
-        <form action="" [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+        <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
           <div class="mb-3">
             <div class="form-floating">
               <input
                 type="text"
                 id="name"
+                name="name"
                 class="form-control mb-2"
                 formControlName="name"
               />
@@ -39,6 +40,7 @@
                 id="email"
                 class="form-control mb-2"
                 formControlName="email"
+                name="email"
               />
               <label for="email"
                 ><i class="fa-solid fa-envelope me-3"></i>Email</label
@@ -73,6 +75,7 @@
                 id="phone"
                 class="form-control mb-2"
                 formControlName="phone"
+                name="phone"
               />
               <label for="phone"
                 ><i class="fa-solid fa-phone me-3"></i>Phone</label
@@ -101,6 +104,7 @@
                 rows="50"
                 cols="50"
                 formControlName="message"
+                name="message"
               ></textarea>
               <label for="message"
                 ><i class="fa-solid fa-comment me-3"></i>Your message</label
@@ -122,10 +126,6 @@
               </div>
             </div>
           </div>
-          <div class="mb-3">
-            <input type="checkbox" checked class="me-3" />
-            <label for="">Send copy to my email</label>
-          </div>
 
           <button
             type="submit"
@@ -134,6 +134,9 @@
           >
             Send Email
           </button>
+          @if(msg){
+          <p>{{ msg }}</p>
+          }
         </form>
       </div>
     </div>
