--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -23,13 +23,12 @@
 .hero-text {
   position: absolute;
   bottom: 10%;
-  top: 70%;
+  top: auto;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
   text-align: center;
-  width: 100%;
-
-
+  width: 90%;
+  padding: 0 5%;
 }
 
 .hero-text h1 {
@@ -40,7 +39,7 @@
 
 .hero-text h2 {
   opacity: 0;
-  font-size: 4rem;
+  font-size: 2.5rem;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
   animation: slideInFromSidesReversed 2s ease-out forwards 2s;
 }
@@ -50,6 +49,49 @@
   margin-top: 1rem;
   animation: slideInFromBottom 2s ease-out;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+}
+
+/* Media Queries for Responsiveness */
+@media (max-width: 1200px) {
+  .hero-text h1 {
+    font-size: 2.5rem;
+  }
+
+  .hero-text h2 {
+    font-size: 2rem;
+  }
+
+  .hero-text p {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .hero-text h1 {
+    font-size: 2rem;
+  }
+
+  .hero-text h2 {
+    font-size: 1.5rem;
+  }
+
+  .hero-text p {
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .hero-text h1 {
+    font-size: 1.5rem;
+  }
+
+  .hero-text h2 {
+    font-size: 1.2rem;
+  }
+
+  .hero-text p {
+    font-size: 0.8rem;
+  }
 }
 
 @keyframes slideInFromSides {
@@ -62,6 +104,7 @@
     transform: translateX(0);
   }
 }
+
 @keyframes slideInFromSidesReversed {
   from {
     opacity: 0;
