--- a/src/app/testimonial/testimonial.component.html
+++ b/src/app/testimonial/testimonial.component.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div class="post-footer">
-                <img src="" alt="" class="rounded-circle" width="40" height="40">
+                <img src="/images/sara.jpg" alt="" class="rounded-circle" width="40" height="40">
                 <div class="text-sm p-3">
                     <p class="fw-semibold text-gray-900 mb-0">Sarah Mitchell</p>
                     <p class="text-gray-600 mb-0">Nature Enthusiast</p>
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <div class="post-footer">
-                <img src="" alt="" class="rounded-circle" width="40" height="40">
+                <img src="/images/james.jpg" alt="" class="rounded-circle" width="40" height="40">
                 <div class="text-sm p-3">
                     <p class="fw-semibold text-gray-900 mb-0">James Anderson</p>
                     <p class="text-gray-600 mb-0">Director of Wildlife Conservation Trust.</p>
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="post-footer">
-                <img src="" alt="" class="rounded-circle" width="40" height="40">
+                <img src="/images/em.jpg" alt="" class="rounded-circle" width="40" height="40">
                 <div class="text-sm p-3">
                     <p class="fw-semibold text-gray-900 mb-0">Emily Thompson</p>
                     <p class="text-gray-600 mb-0">Emily Thompson, Wildlife Photographer</p>
