--- a/src/app/newsletter/newsletter.component.css
+++ b/src/app/newsletter/newsletter.component.css
@@ -1,5 +1,5 @@
 .newsletter-container {
-  background-image: url('https://cdn.pixabay.com/photo/2014/01/12/10/33/bird-242715_1280.jpg');
+  background-image: url("../../../public/images/bird-newsleter.jpg");
   background-size: cover;
   background-position: center;
   padding: 2rem;
