--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,23 +1,33 @@
-<div class="container">
-    <footer class="row row-cols-1 py-5 my-5 border-top">
-        <div class="col">
-            <ul class="nav flex-row justify-content-end">
-                <li class="nav-item mb-2 mx-3">
-                    <a routerLink="/" class="nav-link p-0 text-end">Home</a>
-                </li>
-                <li class="nav-item mb-2 mx-3">
-                    <a routerLink="/about" class="nav-link p-0 text-end">About</a>
-                </li>
-                <li class="nav-item mb-2 mx-3">
-                    <a routerLink="/contact" class="nav-link p-0 text-end">Contact</a>
-                </li>
-            </ul>
-        </div>
-        <p class="text-muted mt-3 text-center"><b>© 2024 CodeFactory</b></p>
-        <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
-            <svg class="bi me-2" width="40" height="32">
-                <use xlink:href="#bootstrap"></use>
-            </svg>
-        </a>
-    </footer>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Footer</title>
+</head>
+<body>
+    <div class="container">
+        <footer class="row row-cols-1 py-0 my-0 border-top">
+            <div class="col">
+                <ul class="nav flex-row justify-content-end">
+                    <li class="nav-item mb-2 mx-3">
+                        <a routerLink="/" class="nav-link p-0 text-end">Home</a>
+                    </li>
+                    <li class="nav-item mb-2 mx-3">
+                        <a routerLink="/about" class="nav-link p-0 text-end">About</a>
+                    </li>
+                    <li class="nav-item mb-2 mx-3">
+                        <a routerLink="/contact" class="nav-link p-0 text-end">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <p class="text-muted mt-3 text-center"><b>© 2024 CodeFactory</b></p>
+            <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
+                <svg class="bi me-2" width="40" height="32">
+                    <use xlink:href="#bootstrap"></use>
+                </svg>
+            </a>
+        </footer>
+    </div>
+</body>
+</html>
