--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Footer</title>
-</head>
-<body>
-    <div class="container">
+
+    <div class="bgcolorFooter">
         <footer class="row row-cols-1 py-0 my-0 border-top">
             <div class="col">
                 <ul class="nav flex-row justify-content-end">
@@ -29,5 +22,3 @@
             </a>
         </footer>
     </div>
-</body>
-</html>
