--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,15 +2,15 @@
     <div class="bgcolorFooter">
         <footer class="row row-cols-1 py-0 my-0 border-top">
             <div class="col">
-                <ul class="nav flex-row justify-content-end">
+                <ul class="nav flex-row justify-content-end mt-1">
                     <li class="nav-item mb-2 mx-3">
-                        <a routerLink="/" class="nav-link p-0 text-end">Home</a>
+                        <a routerLink="/" class="nav-link text-end">Home</a>
                     </li>
                     <li class="nav-item mb-2 mx-3">
-                        <a routerLink="/about" class="nav-link p-0 text-end">About</a>
+                        <a routerLink="/about" class="nav-link text-end">About</a>
                     </li>
                     <li class="nav-item mb-2 mx-3">
-                        <a routerLink="/contact" class="nav-link p-0 text-end">Contact</a>
+                        <a routerLink="/contact" class="nav-link text-end">Contact</a>
                     </li>
                 </ul>
             </div>
