--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,23 +2,19 @@
     <div class="bgcolorFooter">
         <footer class="row row-cols-1 py-0 my-0 border-top">
             <div class="col">
-                <ul class="nav flex-row justify-content-end mt-1">
-                    <li class="nav-item mb-2 mx-3">
+                <ul class="nav flex-row justify-content-end mt-1 mb-2">
+                    <li class="nav-item mx-3">
                         <a routerLink="/" class="nav-link text-end">Home</a>
                     </li>
-                    <li class="nav-item mb-2 mx-3">
+                    <li class="nav-item mx-3">
                         <a routerLink="/about" class="nav-link text-end">About</a>
                     </li>
-                    <li class="nav-item mb-2 mx-3">
+                    <li class="nav-item mx-3">
                         <a routerLink="/contact" class="nav-link text-end">Contact</a>
                     </li>
                 </ul>
             </div>
-            <p class="text-muted mt-3 text-center"><b>© 2024 CodeFactory</b></p>
-            <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
-                <svg class="bi me-2" width="40" height="32">
-                    <use xlink:href="#bootstrap"></use>
-                </svg>
-            </a>
+            <p class="text-muted text-center"><b>© 2024 CodeFactory</b></p>
+           
         </footer>
     </div>
