--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg fixed-top" [class.scrolled]="isScrolled">
   <div class="container-fluid">
-    <a class="navbar-brand text" routerLink="/">Logo</a>
+    <a class="navbar-brand text" routerLink="/">Reed Photography</a>
     <button
       class="navbar-toggler"
       type="button"
