about page responsiveness added, global css box-shadow changed, style of headings added

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,14 +1,9 @@
 <div class="border-padding">
   <h1>Get to know me!</h1>
-  <div class="d-flex justify-content-between align-items-center singularPart">
-    <img
-      class="shadowImg"
-      src="/images/photographer.jpg"
-      alt=""
-      style="max-width: 500px"
-    />
-    <div class="aboutText">
-      <h4>About Me</h4>
+  <div class="about-div singularPart">
+    <img class="about-img shadowImg" src="/images/photographer.jpg" alt="" />
+    <div class="aboutText about-text">
+      <h4 class="heading"><span class="p-4">About Me</span></h4>
       <p>
         Welcome to my world of wildlife photography! I'm Oliver Reed, an
         award-winning wildlife photographer passionate about capturing the
@@ -21,7 +16,7 @@
   </div>
   <div class="awards singularPart">
     <div class="aboutText">
-      <h4>Awards and Recognition</h4>
+      <h4 class="heading"><span class="p-4">Awards and Recognition</span></h4>
       <p>
         I am honored to have received prestigious accolades in the field of
         wildlife photography, including the Wild Photo Award and the British
@@ -32,15 +27,10 @@
     </div>
     <app-awards></app-awards>
   </div>
-  <div class="d-flex justify-content-between align-items-center singularPart">
-    <img
-      class="shadowImg"
-      src="/images/camera.jpg"
-      alt=""
-      style="max-width: 500px"
-    />
-    <div class="aboutText">
-      <h4>My Vision</h4>
+  <div class="about-div-reverse singularPart">
+    <img class="shadowImg about-img" src="/images/camera.jpg" alt="" />
+    <div class="aboutText about-text">
+      <h4 class="heading"><span class="p-4">My Vision</span></h4>
       <p>
         Through my lens, I strive to reveal the intimate and often unseen
         moments of wildlife. My photographs aim to tell stories of survival,
@@ -50,17 +40,12 @@
       </p>
     </div>
   </div>
-  <div
-    class="d-flex flex-row-reverse justify-content-between align-items-center singularPart"
-  >
-    <img
-      class="shadowImg"
-      src="/images/conservation.jpg"
-      alt=""
-      style="max-width: 500px"
-    />
-    <div class="aboutText">
-      <h4>Conservation and Advocacy</h4>
+  <div class="about-div singularPart">
+    <img class="shadowImg about-img" src="/images/conservation.jpg" alt="" />
+    <div class="aboutText about-text">
+      <h4 class="heading">
+        <span class="p-4">Conservation and Advocacy</span>
+      </h4>
       <p>
         Beyond photography, I am deeply committed to wildlife conservation. I
         believe that powerful images can drive awareness and change, encouraging
@@ -71,15 +56,12 @@
       </p>
     </div>
   </div>
-  <div class="d-flex justify-content-between align-items-center singularPart">
-    <img
-      class="shadowImg"
-      src="/images/adventure.jpg"
-      alt=""
-      style="max-width: 500px"
-    />
-    <div class="aboutText">
-      <h4>Join Me on This Adventure</h4>
+  <div class="about-div-reverse singularPart">
+    <img class="shadowImg about-img" src="/images/adventure.jpg" alt="" />
+    <div class="aboutText about-text">
+      <h4 class="heading">
+        <span class="p-4">Join Me on This Adventure</span>
+      </h4>
       <p>
         I invite you to explore my portfolio and join me on this incredible
         adventure. Whether you are a fellow nature enthusiast, a conservation
