--- a/src/app/awards/awards.component.html
+++ b/src/app/awards/awards.component.html
@@ -1,12 +1,12 @@
 <div class="container my-5">
-  <div class="d-flex justify-content-center">
+  <div class="row row-cols-xs-1 row-cols-md-2">
     <img
-      class="award me-5"
+      class="col award me-4 mt-4"
       src="/images/awards/WILD-Photo-Awards.webp"
       alt=""
     />
     <img
-      class="award ms-5"
+      class="col award mt-4"
       src="/images/awards/BWPA-British-Wildlife-Photography-Awards.png"
       alt=""
     />
