--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="contact container">
+<div class="contact">
   <section class="contact-form">
     <div class="my-5">
       <h2 class="my-5 text-center">Get in touch with me</h2>
