--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -11,12 +11,12 @@
   </div>
 </div>
 <div>
-  <div class="my-4">
-    <h2 class="mb-5">My Awards:</h2>
+  <div class="my-4 heading-div">
+    <h2 class="mb-5 heading"><span class="p-4">My Awards</span></h2>
     <app-awards></app-awards>
   </div>
   <div class="my-4">
-    <h2 class="mb-5">Customer opinions:</h2>
+    <h2 class="mb-5 heading"><span class="p-4">Customer opinions</span></h2>
     <app-testimonial></app-testimonial>
     <p>
       To see more of what my satisfied customers have to say about working with
