--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -8,16 +8,48 @@ h4 {
 
 .ending {
   text-align: center;
+  margin-bottom: 3rem;
 }
 
 .aboutText {
-  margin-inline: 30px;
+  margin-inline: 3rem;
 }
 
 .singularPart {
-  margin-block: 40px;
+  margin-block: 6rem;
 }
 
 .shadowImg {
   box-shadow: var(--shadow-box);
+}
+
+.about-div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.about-div-reverse {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+.about-img {
+  width: 40%;
+  margin-right: 2rem;
+}
+
+@media (max-width: 900px) {
+  .about-div,
+  .about-div-reverse {
+    flex-direction: column;
+    margin-bottom: 3rem;
+  }
+  .about-img {
+    margin-bottom: 5rem;
+    width: 90%;
+  }
 }
