--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,15 +1,12 @@
 .contact {
     max-width: 1400px;
-   
+    min-height: 83vh;
 }
 
 .contact-form form{
     width: 500px;
 }
 
-#message {
-    height: 200px !important;
-}
 
 input, textarea {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1) !important;
