button style changed

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -129,7 +129,7 @@
 
           <button
             type="submit"
-            class="btn btn-success mt-3"
+            class="contact-button mt-3"
             [disabled]="!contactForm.valid"
           >
             Send Email
