--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -11,3 +11,18 @@
 input, textarea {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1) !important;
 }
+
+.contact-button {
+    background-color: #ECF39E;
+    color: #282828;
+    border: none;
+    padding: 0.75rem 1.5rem;
+    font-size: 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .contact-button:hover {
+    background-color: #c3d472;
+  }
