--- a/src/app/awards/awards.component.html
+++ b/src/app/awards/awards.component.html
@@ -1,14 +1,14 @@
 <div class="container my-5">
   <div class="row row-cols-xs-1 row-cols-md-2">
-    <img
-      class="col award me-4 mt-4"
-      src="/images/awards/WILD-Photo-Awards.webp"
-      alt=""
-    />
-    <img
-      class="col award mt-4"
-      src="/images/awards/BWPA-British-Wildlife-Photography-Awards.png"
-      alt=""
-    />
+    <div class="my-3 text-center">
+      <img class="award" src="/images/awards/WILD-Photo-Awards.webp" alt="" />
+    </div>
+    <div class="my-3 text-center">
+      <img
+        class="award"
+        src="/images/awards/BWPA-British-Wildlife-Photography-Awards.png"
+        alt=""
+      />
+    </div>
   </div>
 </div>
