page-heading added to about and contact

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
-<div class="border-padding">
-  <h1>Get to know me!</h1>
+<div>
+  <h1 class="page-heading"><span class="p-3">Get to know me</span></h1>
   <div class="about-div singularPart">
     <img class="about-img shadowImg" src="/images/photographer.jpg" alt="" />
     <div class="aboutText about-text">
