--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,9 @@
 <div class="contact">
   <section class="contact-form">
-    <div class="my-5">
-      <h2 class="my-5 text-center">Get in touch with me</h2>
+    <div>
+      <h1 class="page-heading">
+        <span class="p-3">Get in touch with me</span>
+      </h1>
       <div class="d-flex justify-content-center">
         <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
           <div class="mb-3">
