--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,12 @@
 <nav class="navbar navbar-expand-lg fixed-top" [class.scrolled]="isScrolled">
   <div class="container-fluid">
-    <a class="navbar-brand text" routerLink="/">Reed Photography</a>
+    <a routerLink="/"><img
+      src='/images/Logo.png'
+      alt="Picture Logo"
+      class="img-fluid"
+      style="height: 60px; filter:invert(100)"
+      
+    /></a>
     <button
       class="navbar-toggler"
       type="button"
